# neural-networks

./: .gitignore  README.md  pyproject.toml
neural_networks/SCRIPTS/SCRIPTS/: First_file.py  image_classification_with_CNN.py  lfg.py
